[package]
name = "onload"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
log = "0.4.22"
wasm-bindgen = "0.2.99"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.76", features = [
  "Document", "HtmlElement", "Navigator", "ServiceWorkerContainer",
  "ServiceWorkerRegistration", "Text", "Window"
] }